--- a/app/assets/stylesheets/products/_index.scss
+++ b/app/assets/stylesheets/products/_index.scss
@@ -47,10 +47,6 @@
 .product-name {
   text-decoration: none;
   color: black;
-  // &:hover {
-  //   text-decoration: none;
-  //   color: black;
-  // }
 }
 
 .cat-item {
@@ -74,6 +70,11 @@
 
 .product-name {
     color:black;  
+    text-decoration: none; 
+}
+
+.product-name:hover { 
+  text-decoration: none; 
 }
 
 .link-name:hover {
